--- a/css/style.css
+++ b/css/style.css
@@ -42,13 +42,21 @@ body {
     img {
         width: 100%;
         display: block;
+        /* Evaluates to 0rem for a 375px wide viewport, and 1.5rem for 1440px */
+        --radius: calc(2.254vi - 0.528rem);
+        border-radius: var(--radius) var(--radius) 0 0;
     }
 }
 
 main {
     background-color: var(--ui-white);
-    width: 375px;
-    margin: 0 auto;
+    /* Evaluates to 23.4375rem (375px) for a 375px wide viewport,
+       and 46rem (736px) for 1440px */
+    width: calc(15.493rem + 33.897vi);
+    /* Evaluates to 0rem for a 375px wide viewport, and 7.66rem for 1440px */
+    margin: calc(11.508vi - 2.697rem) auto;
+    /* Evaluates to 0rem for a 375px wide viewport, and 1.5rem for 1440px */
+    border-radius: calc(2.254vi - 0.528rem);
 }
 
 header {
@@ -57,7 +65,8 @@ header {
         padding: 1.5rem 0 2rem;
     }
     section {
-        padding: 1.5rem;
+        /* Evaluates to 1.5rem for a 375px wide viewport, and 1.75rem for 1440px */
+        padding: calc(1.412rem + 0.376vi);
         background-color: var(--ui-rose-50);
         border-radius: 0.75rem;
         h2 {
@@ -74,7 +83,7 @@ header {
 }
 
 main > * {
-    margin: 0 2em;
+    margin: 0 2rem;
 }
 
 main > section {
@@ -112,7 +121,7 @@ ul {
         font-weight: 700;
         position: absolute;
         left: -1rem;
-        top: 50%; /* aligns top of the box that conains "•" */
+        top: 50%; /* aligns top of the box that contains "•" */
         transform: translateY(-50%); /* move up half the height of that box */
    }
 }
@@ -123,7 +132,8 @@ h1, h2 {
     line-height: 1;
 }
 h1 {
-    font-size: 2.25rem;
+    /* Evaluates to 2.25rem for a 375px wide viewport, and 2.5rem for 1440px */
+    font-size: calc(2.162rem + 0.376vi);
     color: var(--ui-stone-900);
 }
 h2 {
@@ -156,33 +166,20 @@ table {
     }
 }
 
-@media (min-width: 1440px) {
-    main {
-        width: 736px;
-        margin: 7.66rem auto;
-        border-radius: 1.5rem;
-    }
-
+@media (min-width: 907px) { /* half way between 375px and 1440px */
     .main-illustration {
-        margin: 0 2.5rem;
-        padding-top: 2.5rem;
+        /* Evaluates to 2rem for a 375px wide viewport, and 2.5rem for 1440px */
+        margin: 0 calc(1.824rem + 0.751vi);
+        /* Evaluates to 2rem for a 375px wide viewport, and 2.5rem for 1440px */
+        padding-top: calc(1.824rem + 0.751vi);
         img {
-            border-radius: 0.75rem;
+            /* Evaluates to 0.375rem for a 375px wide viewport, and 0.75rem for 1440px */
+            border-radius: calc(0.243rem + 0.563vi);
         }
     }
 
     main > * {
-        margin: 0 2.5rem;
-    }
-
-    h1 {
-        font-size: 2.5rem;
-    }
-
-    header section {
-        padding: 1.75rem;
+        /* Evaluates to 2rem for a 375px wide viewport, and 2.5rem for 1440px */
+        margin: 0 calc(1.824rem + 0.751vi);
     }
 }
-
-/* .attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); } */
