--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: "Outfit";
-    src: url("/assets/fonts/outfit/Outfit-VariableFont_wght.ttf") format("truetype");
+    src: url("../assets/fonts/outfit/Outfit-VariableFont_wght.ttf") format("truetype");
     font-style: normal;
     font-weight: 100 900;
 }
 
 @font-face {
     font-family: "Young-Serif";
-    src: url("/assets/fonts/young-serif/YoungSerif-Regular.ttf") format("truetype");
+    src: url("../assets/fonts/young-serif/YoungSerif-Regular.ttf") format("truetype");
     font-style: normal;
     font-weight: 400;
 }
