--- a/css/style.css
+++ b/css/style.css
@@ -36,45 +36,59 @@ body {
     line-height: 1.5;
 }
 
-.main-illustration {
-    padding: 0;
-    margin: 0;
-    img {
-        width: 100%;
-        display: block;
-        /* Evaluates to 0rem for a 375px wide viewport, and 1.5rem for 1440px */
-        --radius: calc(2.254vi - 0.528rem);
-        border-radius: var(--radius) var(--radius) 0 0;
-    }
-}
-
 main {
     background-color: var(--ui-white);
     /* Evaluates to 23.4375rem (375px) for a 375px wide viewport,
-       and 46rem (736px) for 1440px */
-    width: calc(15.493rem + 33.897vi);
+    and 46rem (736px) for 1440px */
+    inline-size: calc(15.493rem + 33.897vi);
     /* Evaluates to 0rem for a 375px wide viewport, and 7.66rem for 1440px */
-    margin: calc(11.508vi - 2.697rem) auto;
+    margin-block: calc(11.508vi - 2.697rem);
+    margin-inline: auto;
     /* Evaluates to 0rem for a 375px wide viewport, and 1.5rem for 1440px */
     border-radius: calc(2.254vi - 0.528rem);
 }
 
+main > * {
+    margin-inline: 2rem;
+}
+
+main > section {
+    padding-block: 2em;
+    border-block-end: 1px solid var(--ui-stone-150);
+    &:last-child {
+        border-block-end: none;
+        padding-block-end: 1.85rem;
+    }
+}
+
+.main-illustration {
+    margin-inline: 0;
+    img {
+        inline-size: 100%;
+        display: block;
+        /* Evaluates to 0rem for a 375px wide viewport, and 1.5rem for 1440px */
+        --radius: calc(2.254vi - 0.528rem);
+        border-start-start-radius: var(--radius);
+        border-start-end-radius: var(--radius);
+    }
+}
+
 header {
-    padding-top: 2.5rem;
+    padding-block-start: 2.5rem;
     p {
-        padding: 1.5rem 0 2rem;
+        padding-block: 1.5em 2em;
     }
     section {
-        /* Evaluates to 1.5rem for a 375px wide viewport, and 1.75rem for 1440px */
-        padding: calc(1.412rem + 0.376vi);
+        /* Evaluates to 1.5em for a 375px wide viewport, and 1.75em for 1440px */
+        padding: calc(1.412em + 0.376vi);
         background-color: var(--ui-rose-50);
-        border-radius: 0.75rem;
+        border-radius: 0.75em;
         h2 {
             font-family: Outfit, Arial, Helvetica, sans-serif;
             color: var(--ui-rose-800);
             font-weight: 600;
             font-size: 1.25rem;
-            padding-bottom: 1rem;
+            padding-block-end: 0.8em;
         }
         li::before {
             color: var(--ui-rose-800);
@@ -82,26 +96,14 @@ header {
     }
 }
 
-main > * {
-    margin: 0 2rem;
-}
-
-main > section {
-    padding: 2rem 0;
-    border-bottom: 1px solid var(--ui-stone-150);
-    &:last-child {
-        border-bottom: none;
-        padding-bottom: 1.9rem;
-    }
-}
 
 ul, ol {
-    padding-left: 1.5em;
+    padding-inline-start: 1.5em;
     li {
-        padding-left: 1rem;
-        margin-top: 0.5rem;
+        padding-inline-start: 1em;
+        margin-block-start: 0.5em;
         &:first-child {
-            margin-top: 0;
+            margin-block-start: 0;
         }
         &::marker {
             color: var(--ui-brown-800);
@@ -114,16 +116,15 @@ ul {
     list-style: none;
     li {
         position: relative;
+        &::before {
+            content: "•";
+            font-weight: 700;
+            color: var(--ui-brown-800);
+            position: absolute;
+            inset-inline-start: -1em;
+            inset-block-start: calc(50% - (1lh / 2));
+        }
     }
-    li::before {
-        content: "•";
-        color: var(--ui-brown-800);
-        font-weight: 700;
-        position: absolute;
-        left: -1rem;
-        top: 50%; /* aligns top of the box that contains "•" */
-        transform: translateY(-50%); /* move up half the height of that box */
-   }
 }
 
 h1, h2 {
@@ -139,47 +140,46 @@ h1 {
 h2 {
     font-size: 1.75rem;
     color: var(--ui-brown-800);
-    padding-bottom: 1.45rem;
+    padding-block-end: 0.84em;
 }
 
 table {
-    width: 100%;
-    padding-top: 0.65rem;
+    inline-size: 100%;
+    padding-block-start: 0.65em;
     th, td {
-        border-top: 1px solid var(--ui-stone-150);
-        padding: 0.75rem 0 0.55rem;
+        border-block-start: 1px solid var(--ui-stone-150);
+        padding-block: 0.75em 0.55em;
     }
     th {
         font-weight: 400;
-        text-align: left;
-        padding-left: 1.9rem;
-        width: 50%;
+        text-align: start;
+        padding-inline-start: 1.9em;
+        inline-size: 50%;
     }
     td {
         color: var(--ui-brown-800);
         font-weight: 700;
-        padding-left: 0.45rem;
-        width: 50%;
+        padding-inline-start: 0.45em;
+        inline-size: 50%;
     }
     tr:first-child :is(th, td) {
-        border-top: none;
+        border-block-start: none;
     }
 }
 
-@media (min-width: 907px) { /* half way between 375px and 1440px */
+@media (min-width: 56.6875rem) { /* 907px, half way between 375px and 1440px */
     .main-illustration {
         /* Evaluates to 2rem for a 375px wide viewport, and 2.5rem for 1440px */
-        margin: 0 calc(1.824rem + 0.751vi);
+        margin-inline: calc(1.824rem + 0.751vi);
         /* Evaluates to 2rem for a 375px wide viewport, and 2.5rem for 1440px */
-        padding-top: calc(1.824rem + 0.751vi);
+        padding-block-start: calc(1.824rem + 0.751vi);
         img {
             /* Evaluates to 0.375rem for a 375px wide viewport, and 0.75rem for 1440px */
             border-radius: calc(0.243rem + 0.563vi);
         }
     }
-
     main > * {
         /* Evaluates to 2rem for a 375px wide viewport, and 2.5rem for 1440px */
-        margin: 0 calc(1.824rem + 0.751vi);
+        margin-inline: calc(1.824rem + 0.751vi);
     }
 }
